Now Java 8 compatible